Fix docker issue + Modifications in community page visibility #152 #153

--- a/app/styles/community.module.css
+++ b/app/styles/community.module.css
@@ -167,7 +167,6 @@
 .friendBoards {
   display: flex;
   flex-direction: column;
-  gap: 12px;
   margin-top: 8px;
 }
 
@@ -176,7 +175,7 @@
   border-radius: 14px;
   padding: 10px;
   border: 1px solid rgba(255, 255, 255, 0.35);
-  margin-bottom: 18px;
+  margin-bottom: 10px;
 }
 
 .friendBtn {
